--- a/MPTray/Views/PlayerWindow.xaml
+++ b/MPTray/Views/PlayerWindow.xaml
@@ -3,16 +3,16 @@
     x:Class="MPTray.Views.PlayerWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="using:Microsoft.UI.Xaml.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:i="using:Microsoft.Xaml.Interactivity"
     xmlns:local="using:MPTray.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:num="using:System.Numerics"
     xmlns:ui="using:CommunityToolkit.WinUI"
     Activated="Window_Activated"
     mc:Ignorable="d">
-    <Window.SystemBackdrop>
-        <DesktopAcrylicBackdrop />
-    </Window.SystemBackdrop>
+    
     <Grid x:Name="Windows11" Padding="12,6,12,6">
         <Grid.RowDefinitions>
             <RowDefinition />
@@ -29,6 +29,7 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <Border
+                x:Name="CoverBorder"
                 Grid.RowSpan="2"
                 Width="64"
                 Height="64"
@@ -38,10 +39,18 @@
                 Background="White"
                 CornerRadius="8"
                 Translation="0,0,16">
+                <i:Interaction.Behaviors>
+                    <i:DataTriggerBehavior Binding="{x:Bind SettingsVM.IsCoverBorderOn, Mode=OneWay}" Value="True">
+                        <i:ChangePropertyAction PropertyName="Padding" Value="1.5" />
+                    </i:DataTriggerBehavior>
+                    <i:DataTriggerBehavior Binding="{x:Bind SettingsVM.IsCoverBorderOn, Mode=OneWay}" Value="False">
+                        <i:ChangePropertyAction PropertyName="Padding" Value="0" />
+                    </i:DataTriggerBehavior>
+                </i:Interaction.Behaviors>
                 <Border.Shadow>
-                    <ThemeShadow />
+                    <ThemeShadow/>
                 </Border.Shadow>
-                <Border Margin="1.5" CornerRadius="8">
+                <Border CornerRadius="8">
                     <Image Source="{x:Bind PlayerVM.ThumbnailSource, Mode=OneWay}" Stretch="UniformToFill" />
                 </Border>
             </Border>
@@ -529,6 +538,18 @@
                 <i:EventTriggerBehavior EventName="ValueChanged">
                     <i:InvokeCommandAction Command="{x:Bind PlayerVM.ChangePositionCommand}" CommandParameter="{Binding Value, ElementName=ProgressSlider}" />
                 </i:EventTriggerBehavior>
+                <i:DataTriggerBehavior Binding="{x:Bind SettingsVM.IsSliderOn}" Value="True">
+                    <i:ChangePropertyAction
+                        PropertyName="Visibility"
+                        TargetObject="{x:Bind ProgressSlider}"
+                        Value="Visible" />
+                </i:DataTriggerBehavior>
+                <i:DataTriggerBehavior Binding="{x:Bind SettingsVM.IsSliderOn}" Value="False">
+                    <i:ChangePropertyAction
+                        PropertyName="Visibility"
+                        TargetObject="{x:Bind ProgressSlider}"
+                        Value="Collapsed" />
+                </i:DataTriggerBehavior>
             </i:Interaction.Behaviors>
         </Slider>
         <TextBlock
@@ -537,13 +558,31 @@
             VerticalAlignment="Bottom"
             FontSize="11"
             Opacity="0.8"
-            Text="{x:Bind PlayerVM.PositionText, Mode=OneWay}" />
+            Text="{x:Bind PlayerVM.PositionText, Mode=OneWay}">
+            <i:Interaction.Behaviors>
+                <i:DataTriggerBehavior Binding="{x:Bind SettingsVM.IsSliderOn, Mode=OneWay}" Value="True">
+                    <i:ChangePropertyAction PropertyName="Visibility" Value="Visible" />
+                </i:DataTriggerBehavior>
+                <i:DataTriggerBehavior Binding="{x:Bind SettingsVM.IsSliderOn, Mode=OneWay}" Value="False">
+                    <i:ChangePropertyAction PropertyName="Visibility" Value="Collapsed" />
+                </i:DataTriggerBehavior>
+            </i:Interaction.Behaviors>
+        </TextBlock>
         <TextBlock
             Grid.Row="2"
             HorizontalAlignment="Right"
             VerticalAlignment="Bottom"
             FontSize="11"
             Opacity="0.8"
-            Text="{x:Bind PlayerVM.DurationText, Mode=OneWay}" />
+            Text="{x:Bind PlayerVM.DurationText, Mode=OneWay}">
+            <i:Interaction.Behaviors>
+                <i:DataTriggerBehavior Binding="{x:Bind SettingsVM.IsSliderOn, Mode=OneWay}" Value="True">
+                    <i:ChangePropertyAction PropertyName="Visibility" Value="Visible" />
+                </i:DataTriggerBehavior>
+                <i:DataTriggerBehavior Binding="{x:Bind SettingsVM.IsSliderOn, Mode=OneWay}" Value="False">
+                    <i:ChangePropertyAction PropertyName="Visibility" Value="Collapsed" />
+                </i:DataTriggerBehavior>
+            </i:Interaction.Behaviors>
+        </TextBlock>
     </Grid>
 </Window>
